@@ -8,10 +8,14 @@
 package org.elasticsearch.xpack.esql.qa.parquet;
 
 import org.elasticsearch.test.cluster.ElasticsearchCluster;
+import org.elasticsearch.test.cluster.FeatureFlag;
 import org.elasticsearch.test.cluster.local.LocalClusterConfigProvider;
+import org.elasticsearch.test.cluster.local.LocalClusterSpecBuilder;
 import org.elasticsearch.test.cluster.local.distribution.DistributionType;
 import org.elasticsearch.xpack.esql.datasources.Federation;
 import org.elasticsearch.xpack.esql.datasources.FixtureUtils;
+import org.elasticsearch.xpack.esql.datasources.S3FixtureUtils;
+import org.elasticsearch.xpack.esql.qa.rest.EsqlDataSourceMixedClusterTestSupport;
 
 import java.util.function.Supplier;
 
@@ -29,7 +33,7 @@ public class Clusters {
     /**
      * Installs the project-encryption-key (PEK) secure settings so data-source secrets can be encrypted
      * when a data source is registered via {@code PUT /_query/data_source}. Mirrors the single-node esql
-     * qa datasource-CRUD cluster config. Applied only by {@link #testClusterWithEncryption}.
+     * qa datasource-CRUD cluster config. Applied only by the encryption-enabled cluster helpers.
      */
     private static final LocalClusterConfigProvider DATASET_ENCRYPTION_CONFIG = builder -> builder.keystore(
         "cluster.state.encryption.password." + ENCRYPTION_PASSWORD_ID,
@@ -59,9 +63,25 @@ public class Clusters {
     }
 
     public static ElasticsearchCluster testCluster(Supplier<String> s3EndpointSupplier, LocalClusterConfigProvider configProvider) {
+        return clusterBuilder(s3EndpointSupplier, configProvider).shared(true).build();
+    }
+
+    /**
+     * A non-shared, {@code nodeCount}-node variant of {@link #testClusterWithEncryption(Supplier)}. Needed by suites
+     * whose subject is <em>where</em> an external read runs: the
+     * shared single-node cluster collapses the coordinator and the data node onto one JVM, so it cannot distinguish a
+     * coordinator-local scan from one shipped to another node.
+     */
+    public static ElasticsearchCluster multiNodeTestClusterWithEncryption(Supplier<String> s3EndpointSupplier, int nodeCount) {
+        return clusterBuilder(s3EndpointSupplier, DATASET_ENCRYPTION_CONFIG).nodes(nodeCount).build();
+    }
+
+    private static LocalClusterSpecBuilder<ElasticsearchCluster> clusterBuilder(
+        Supplier<String> s3EndpointSupplier,
+        LocalClusterConfigProvider configProvider
+    ) {
         return ElasticsearchCluster.local()
             .distribution(DistributionType.DEFAULT)
-            .shared(true)
             .plugin("inference-service-test")
             // Enable S3 repository plugin for S3 access
             .module("repository-s3")
@@ -79,6 +99,7 @@ public class Clusters {
             .setting("esql.external.local_allowed_paths", FixtureUtils.pathRepoRootForFixtures(Clusters.class))
             // S3 client configuration for accessing the S3HttpFixture
             .setting("s3.client.default.endpoint", s3EndpointSupplier)
+            .setting(S3FixtureUtils.ALLOWED_ENDPOINT_HOSTS_SETTING, S3FixtureUtils.LOOPBACK_ENDPOINT_HOSTS)
             // S3 credentials must be stored in keystore, not as regular settings
             .keystore("s3.client.default.access_key", ACCESS_KEY)
             .keystore("s3.client.default.secret_key", SECRET_KEY)
@@ -95,12 +116,40 @@ public class Clusters {
             // This must be set as a JVM arg to take effect before any Arrow classes are loaded
             .jvmArg("-Darrow.allocation.manager.type=Unsafe")
             // Apply any additional configuration
-            .apply(() -> configProvider)
-            .build();
+            .apply(() -> configProvider);
     }
 
     public static ElasticsearchCluster testCluster(Supplier<String> s3EndpointSupplier) {
         return testCluster(s3EndpointSupplier, config -> {});
+    }
+
+    /**
+     * Mixed old/current variant used only by the reusable data-source BWC tasks.
+     */
+    public static ElasticsearchCluster bwcTestCluster(Supplier<String> s3EndpointSupplier) {
+        String fixturesPath = FixtureUtils.pathRepoRootForFixtures(Clusters.class);
+        return EsqlDataSourceMixedClusterTestSupport.mixedCluster(
+            () -> fixturesPath,
+            builder -> builder.module("repository-s3")
+                .module("repository-gcs")
+                .setting("xpack.security.enabled", "false")
+                .setting("xpack.license.self_generated.type", "trial")
+                .setting("xpack.ml.enabled", "false")
+                .setting("path.repo", fixturesPath)
+                .setting("s3.client.default.endpoint", s3EndpointSupplier)
+                .keystore("s3.client.default.access_key", ACCESS_KEY)
+                .keystore("s3.client.default.secret_key", SECRET_KEY)
+                .setting("s3.client.default.protocol", "http")
+                .environment("AWS_CONFIG_FILE", "/dev/null/aws/config")
+                .environment("AWS_SHARED_CREDENTIALS_FILE", "/dev/null/aws/credentials")
+                .jvmArg("--add-opens=java.base/java.nio=ALL-UNNAMED")
+                .jvmArg("-Darrow.allocation.manager.type=Unsafe")
+                .feature(FeatureFlag.ESQL_EXTERNAL_DATASOURCES_LOCAL)
+                .feature(FeatureFlag.ESQL_EXTERNAL_DATASOURCES_HTTP)
+                .feature(FeatureFlag.ESQL_EXTERNAL_GCS)
+                .feature(FeatureFlag.ESQL_EXTERNAL_AZURE),
+            (node, version, current) -> {}
+        );
     }
 
     /**
